@@ -48,6 +48,8 @@ t/MARC-Convert-Wikidata-Object-People/05-date_of_death.t
 t/MARC-Convert-Wikidata-Object-People/06-name.t
 t/MARC-Convert-Wikidata-Object-People/07-nkcr_aut.t
 t/MARC-Convert-Wikidata-Object-People/08-surname.t
+t/MARC-Convert-Wikidata-Object-People/09-work_period_start.t
+t/MARC-Convert-Wikidata-Object-People/10-work_period_end.t
 t/MARC-Convert-Wikidata-Object-Publisher/01-use.t
 t/MARC-Convert-Wikidata-Object-Publisher/02-version.t
 t/MARC-Convert-Wikidata-Object-Publisher/03-new.t
